RESOLVED FIXED258588
YouTube has single column layout on iPad when backgrounding and returning
https://bugs.webkit.org/show_bug.cgi?id=258588
Summary YouTube has single column layout on iPad when backgrounding and returning
Sammy Gill
Reported 2023-06-27 13:23:03 PDT
To reproduce this issue: 1.) Got to Youtube on an iPad 2.) After the page has loaded background Safari 3.) Foreground Safari You would expect the layout to be the same as when you backgrounded it. However, it will only show a single column of thumbnails instead.
Attachments
Sammy Gill
Comment 1 2023-06-27 13:23:42 PDT
EWS
Comment 2 2023-06-28 17:11:15 PDT
Committed 265603@main (e54ba88232e1): <https://commits.webkit.org/265603@main> Reviewed commits have been landed. Closing PR #15346 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.